<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/imageContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="5:4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivCharacter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="@drawable/bg_gradient_title"
                android:scaleType="centerCrop"
                tools:src="@drawable/img_sample_character" />

            <com.luz.rickmorty.ui.utils.StatusView
                android:id="@+id/statusView"
                style="@style/StatusViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginHorizontal="@dimen/margin_app"
                app:status="unknown" />
        </FrameLayout>

        <TextView
            android:id="@+id/tvQuantityEpisodes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_app"
            android:layout_marginTop="@dimen/dimen_medium_1_size"
            android:textColor="?colorPrimaryVariant"
            android:textSize="@dimen/text_medium_1_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageContainer"
            tools:text="Rick appeared in 20 episodes." />

        <GridLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_app"
            android:layout_marginTop="@dimen/dimen_medium_0_size"
            android:columnCount="2"
            android:useDefaultMargins="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvQuantityEpisodes">

            <com.luz.rickmorty.ui.utils.AttributeCharacterView
                android:id="@+id/mSpecies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:title="@string/species" />

            <com.luz.rickmorty.ui.utils.AttributeCharacterView
                android:id="@+id/mType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:title="@string/type" />

            <com.luz.rickmorty.ui.utils.AttributeCharacterView
                android:id="@+id/mGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:title="@string/gender" />

            <com.luz.rickmorty.ui.utils.AttributeCharacterView
                android:id="@+id/mOrigin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:title="@string/origin" />

            <com.luz.rickmorty.ui.utils.AttributeCharacterView
                android:id="@+id/mLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:title="@string/location" />
        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>